--- a/style.css
+++ b/style.css
@@ -1,33 +1,65 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0;
+* {
     margin: 0;
+    padding: 0;
+}
+body{
+    background-color: #FFC785;
+    text-align: center;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
+.container{
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.row {
-    display: flex;
-}
-
-.cell {
-    width: 100px;
-    height: 100px;
-    background-color: #fff;
-    border: 2px solid #000;
+.game{
+    height: 60vmin;
+    width: 60vmin;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
-    font-size: 2em;
+    gap: 1.5vmin;
 }
 
-.cell:hover {
-    background-color: #e0e0e0;
+.box{
+    height: 18vmin;
+    width: 18vmin;
+    border-radius: 10px;
+    border: none;
+    font-size: 7vmin;
+    color: #155E95;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+#reset-btn{
+    padding: 10px;
+    margin-top: 5px;
+    font-size: 18px;
+    border-radius: 7px;
+    background-color: black;
+    color: white;
+}
+#new-btn {
+    padding: 10px;
+    margin-top: 5px;
+    font-size: 18px;
+    border-radius: 7px;
+    background-color: black;
+    color: white;
+}
+
+#msg{
+    color: #48A6A7; 
+    font-size: 50px;
+}
+
+.hide{
+    display: none;
+}
+
+.box:hover{
     cursor: pointer;
+    background-color: #98D8EF;
 }
